--- a/package.xml
+++ b/package.xml
@@ -1,109 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>Account</members>
-        <members>AccountIntelligence</members>
-        <members>Actions</members>
-        <members>Activities</members>
-        <members>Address</members>
-        <members>Analytics</members>
-        <members>Apex</members>
-        <members>AppAnalytics</members>
-        <members>AppExperience</members>
-        <members>Archive</members>
-        <members>Blockchain</members>
-        <members>BusinessHours</members>
-        <members>Campaign</members>
-        <members>Case</members>
-        <members>Chatter</members>
-        <members>ChatterEmailsMD</members>
-        <members>Communities</members>
-        <members>Company</members>
-        <members>ConnectedApp</members>
-        <members>Content</members>
-        <members>Contract</members>
-        <members>ConversationalIntelligence</members>
-        <members>Currency</members>
-        <members>CustomerDataPlatform</members>
-        <members>Deployment</members>
-        <members>DevHub</members>
-        <members>Discovery</members>
-        <members>DocumentChecklist</members>
-        <members>EAC</members>
-        <members>EmailAdministration</members>
-        <members>EmailIntegration</members>
-        <members>EmailTemplate</members>
-        <members>EmployeeUser</members>
-        <members>EncryptionKey</members>
-        <members>EnhancedNotes</members>
-        <members>Entitlement</members>
-        <members>Essentials</members>
-        <members>Event</members>
-        <members>ExperienceBundle</members>
-        <members>ExternalServices</members>
-        <members>FileUploadAndDownloadSecurity</members>
-        <members>FilesConnect</members>
-        <members>Flow</members>
-        <members>Forecasting</members>
-        <members>Formula</members>
-        <members>GoogleApps</members>
-        <members>Ideas</members>
-        <members>Industries</members>
-        <members>InvocableAction</members>
-        <members>IsvHammer</members>
-        <members>Language</members>
-        <members>LeadConfig</members>
-        <members>LightningExperience</members>
-        <members>Macro</members>
-        <members>MapsAndLocation</members>
-        <members>Meetings</members>
-        <members>Mobile</members>
-        <members>MyDomain</members>
-        <members>Name</members>
-        <members>Notifications</members>
-        <members>ObjectLinking</members>
-        <members>OmniChannel</members>
-        <members>Opportunity</members>
-        <members>Order</members>
-        <members>Org</members>
-        <members>Pardot</members>
-        <members>PardotEinstein</members>
-        <members>PartyDataModel</members>
-        <members>PathAssistant</members>
-        <members>Picklist</members>
-        <members>PlatformEncryption</members>
-        <members>Portals</members>
-        <members>PredictionBuilder</members>
-        <members>Privacy</members>
-        <members>Product</members>
-        <members>QuickText</members>
-        <members>Quote</members>
-        <members>RealTimeEvent</members>
-        <members>RecommendationBuilder</members>
-        <members>RecordPage</members>
-        <members>RetailExecution</members>
-        <members>Schema</members>
-        <members>Search</members>
-        <members>Security</members>
-        <members>ServiceCloudVoice</members>
-        <members>ServiceSetupAssistant</members>
-        <members>Sharing</members>
-        <members>Site</members>
-        <members>SocialCustomerService</members>
-        <members>SocialProfile</members>
-        <members>SourceTracking</members>
-        <members>Survey</members>
-        <members>SystemNotification</members>
-        <members>Territory2</members>
-        <members>Trailhead</members>
-        <members>TrialOrg</members>
-        <members>UserEngagement</members>
-        <members>UserInterface</members>
-        <members>UserManagement</members>
-        <members>Voice</members>
-        <members>WebToX</members>
-        <members>WorkDotCom</members>
-        <name>Settings</name>
+        <members>copado__AdvanceTemplate</members>
+        <members>copado__BasicTemplate</members>
+        <members>copado__CodeMirror</members>
+        <members>copado__CopadoChangeManagement</members>
+        <members>copado__CopadoKanban</members>
+        <members>copado__CopadoLightningCSS</members>
+        <members>copado__CreateTestScriptSteps</members>
+        <members>copado__CustomSettingComponent</members>
+        <members>copado__DTS_images</members>
+        <members>copado__DW_custom_css</members>
+        <members>copado__DW_images</members>
+        <members>copado__DW_javascript</members>
+        <members>copado__DXType</members>
+        <members>copado__DataComponent</members>
+        <members>copado__DataTables10</members>
+        <members>copado__DataTemplateImport_custom_css</members>
+        <members>copado__DataTemplateImport_javascript</members>
+        <members>copado__DataTemplateResult_javascript</members>
+        <members>copado__DataTemplateSetup_custom_css</members>
+        <members>copado__DataTemplateSetup_javascript</members>
+        <members>copado__DxIcon</members>
+        <members>copado__Hub</members>
+        <members>copado__JsRemoting</members>
+        <members>copado__KanbanBoard</members>
+        <members>copado__LeftArrow</members>
+        <members>copado__MetadataComponent</members>
+        <members>copado__PipelineCSS</members>
+        <members>copado__PipelineDiagram</members>
+        <members>copado__PipelineJS</members>
+        <members>copado__RepositoryBranches</members>
+        <members>copado__ResolveConflict_css</members>
+        <members>copado__ResolveConflict_js</members>
+        <members>copado__RightArrow</members>
+        <members>copado__SLDS</members>
+        <members>copado__ScratchOrg</members>
+        <members>copado__SeleniumStatics</members>
+        <members>copado__SetupDashboard</members>
+        <members>copado__SetupDashboardIcons</members>
+        <members>copado__SetupDashboardJS</members>
+        <members>copado__StandardTemplate</members>
+        <members>copado__Statics</members>
+        <members>copado__UserStorySelectedMetadata</members>
+        <members>copado__UserStoryStreamingService</members>
+        <members>copado__UserStoryTestClasses</members>
+        <members>copado__VisJavascript</members>
+        <members>copado__YamlMinJS</members>
+        <members>copado__apexTestResult</members>
+        <members>copado__arrow_down</members>
+        <members>copado__arrow_empty</members>
+        <members>copado__arrow_up</members>
+        <members>copado__artifactmanagemetadata</members>
+        <members>copado__backDeploy</members>
+        <members>copado__common</members>
+        <members>copado__copadoDXGrid</members>
+        <members>copado__copadoStreamingService</members>
+        <members>copado__cronExpression</members>
+        <members>copado__deployment</members>
+        <members>copado__deploymentFlow</members>
+        <members>copado__deploymentJobResults</members>
+        <members>copado__deploymentStreamingService</members>
+        <members>copado__filter</members>
+        <members>copado__filterComponent</members>
+        <members>copado__filterComponentCSS</members>
+        <members>copado__gitCommit</members>
+        <members>copado__gitCommitCommons</members>
+        <members>copado__gitCommitDX</members>
+        <members>copado__gitCommitDXExtension</members>
+        <members>copado__gitCommitMain</members>
+        <members>copado__gitCommitVlocity</members>
+        <members>copado__handleBar_v4_0_11</members>
+        <members>copado__jqw430</members>
+        <members>copado__jqx</members>
+        <members>copado__jqx_metadatagrid_images</members>
+        <members>copado__lexLookup</members>
+        <members>copado__localStreamingService</members>
+        <members>copado__metadataGrid2</members>
+        <members>copado__metadataGrid3</members>
+        <members>copado__metadataReplace</members>
+        <members>copado__metadataselector</members>
+        <members>copado__orgMetadata</members>
+        <members>copado__pipelineStreamingService</members>
+        <members>copado__pullRequest</members>
+        <members>copado__sandbox</members>
+        <members>copado__seleniumSettings</members>
+        <members>copado__sforce</members>
+        <members>copado__snapshotDifferences</members>
+        <members>copado__sortablejs</members>
+        <members>copado__staticResources</members>
+        <members>copado__statusManager</members>
+        <members>copado__urlcallout</members>
+        <members>copado__utils</members>
+        <members>copado__utilsV2</members>
+        <members>copado__variableLookup</members>
+        <members>copado__webhookLookup</members>
+        <name>StaticResource</name>
     </types>
     <version>51.0</version>
 </Package>
